--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==3.0.9"
+django = "3.0.9"
 
 [dev-packages]
-black = "==20.8b1"
+black = "20.8b1"
 
 [requires]
 python_version = "3.8"
