--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==3.0.9"
 django-crispy-forms = "*"
 python-dotenv = "*"
+pillow = "*"
 
 [dev-packages]
 black = "==20.8b1"
