--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ python-dotenv = "*"
 pillow = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
+gunicorn = "*"
 
 [dev-packages]
 black = "==20.8b1"
