--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-CORE_LOADERS_FOR_DYNACONF = ["YAML"]
-ENVVAR_PREFIX_FOR_DYNACONF = MYSITE
-YAML_LOADER_FOR_DYNACONF = safe_load
+CORE_LOADERS_FOR_DYNACONF=["YAML"]
+ENVVAR_PREFIX_FOR_DYNACONF=MYSITE
+YAML_LOADER_FOR_DYNACONF=safe_load
+
+
 
