--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -7,6 +7,13 @@ default:
   EMAIL_HOST_PASSWORD: ""
   EMAIL_HOST: ""
   EMAIL_PORT: ""
+  AWS_ACCESS_KEY_ID: ""
+  AWS_SECRET_ACCESS_KEY: ""
+  AWS_STORAGE_BUCKET_NAME: ""
+  DEFAULT_FILE_STORAGE: ""
+
+  STATIC_URL: ""
+  MEDIA_URL: ""
 
 
 development:
